[update] svhを更新に含めるように修正

--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,5 @@
 #.xci: IP-core property file with core container disabled
 #*.dcp (checkpoint files: better be ignored!)
 #!*.dcp
-
+!*.svh
 # End of https://www.toptal.com/developers/gitignore/api/vivado,xilinxvivado
